--- a/404.html
+++ b/404.html
@@ -1,16 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>404 - Página no encontrada</title>
-    <link rel="stylesheet" href="styles/style.css">
+<link rel="stylesheet" href="styles/style.css">
     <style>
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             margin: 0;
             padding: 0;
-            background: url('https://cdn.discordapp.com/attachments/1238308863476891709/1331420012048814160/450_1000.png?ex=67918d03&is=67903b83&hm=821c38fdd73484ab7f3e9c405b9882fd4eff85f80ac9d8a958b169466fc01247&') no-repeat center center fixed;
+            background: url('https://cdn.discordapp.com/attachments/1238308863476891709/1331789480188842065/29_sin_titulo_20250122185547.png?ex=6792e51b&is=6791939b&hm=5a2a414032f6bdf7d41661075b4e9a07be3d016392c043c46cadf5574e9d080c&') no-repeat center center fixed;
             background-size: cover;
             color: #333;
             display: flex;
@@ -37,9 +31,15 @@
             color: #4CAF50;
             text-decoration: none;
             font-weight: bold;
+            background-color: #f0f0f0;
+            padding: 10px 20px;
+            border-radius: 5px;
+            transition: background-color 0.3s ease;
         }
         a:hover {
-            text-decoration: underline;
+            text-decoration: none;
+            background-color: #4CAF50;
+            color: #fff;
         }
     </style>
 </head>
@@ -51,4 +51,3 @@
         <p><a href="index.html">Volver a la página principal</a></p>
     </div>
 </body>
-</html>
