--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             font-family: 'Roboto', sans-serif;
             margin: 0;
             padding: 0;
-            background: url('https://cdn.discordapp.com/attachments/1267235274518302860/1331755101177516113/pexels-alex-andrews-271121-3805983.jpg?ex=6792c516&is=67917396&hm=f37e7f22dbc557a261e6dff41474a8d5d784c437040edbba49dfa9c2204f0a60&') no-repeat center center fixed;
+            background: url('https://cdn.discordapp.com/attachments/1321222458933772349/1329646391466659880/SPOILER_image.png?ex=679107f3&is=678fb673&hm=1fb1bd439c97b36ad8d631d6be42c7a3830809fe6f3ee3f78982325850e541d4&') no-repeat center center fixed;
             background-size: cover;
             color: #333;
             display: flex;
